# sp-as-touchpad

./: CMakeLists.txt  __noop__  main.cpp  pages.example.json  vcpkg.json
templates/: index.html  index.js
test/: CMakeLists.txt
